added network request and parsing

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,8 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/action_request"
+        android:title="@string/request_menu"
+        android:orderInCategory="99"
+        android:icon="@android:drawable/ic_menu_more"
+        android:showAsAction="always" />
+
+    <item android:id="@+id/action_add"
+        android:title="@string/add_menu"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:icon="@android:drawable/ic_menu_add"
+        android:showAsAction="always" />
 </menu>
