--- a/app/src/main/res/layout/weather_list_item.xml
+++ b/app/src/main/res/layout/weather_list_item.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:minHeight="?android:listPreferredItemHeight"
     android:gravity="center"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:clickable="false"
+    android:descendantFocusability="blocksDescendants">
 
 
     <TextView android:id="@+id/time"
@@ -31,6 +33,6 @@
         android:id="@+id/checkBox"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:enabled="false"/>
+        android:clickable="false"/>
 
 </RelativeLayout>
